--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-/vol/api/.pnp
-/vol/api/.pnp.js
+/vol/app/.pnp
+/vol/app/.pnp.js
 
 # testing
-/vol/api/coverage
+/vol/app/coverage
 
 # production
-/vol/api/build
+/vol/app/build
 
 # misc
-/vol/api/.DS_Store
-/vol/api/.env.local
-/vol/api/.env.development.local
-/vol/api/.env.test.local
-/vol/api/.env.production.local
+/vol/app/.DS_Store
+/vol/app/.env.local
+/vol/app/.env.development.local
+/vol/app/.env.test.local
+/vol/app/.env.production.local
 
-/vol/api/npm-debug.log*
-/vol/api/yarn-debug.log*
-/vol/api/yarn-error.log*
+/vol/app/npm-debug.log*
+/vol/app/yarn-debug.log*
+/vol/app/yarn-error.log*
 
 /vol/api/node_modules
 /vol/api/public/hot
